# vox

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
client/: CMakeLists.txt
client/qml/: LoadingPage.qml  Main.qml  MainPage.qml
client/res/: resources.qrc
client/src/: Chat.h  ChatsDataModel.cpp  ChatsDataModel.h  VoxClient.cpp  VoxClient.h  client-test-main.cpp
cmake/: common.cmake
common/: CMakeLists.txt  pch.h
common/include/vox/async/: task.h
common/include/vox/debug/: debugger.h
common/include/vox/diag/: assertion.h  logging.h  source_info.h
common/include/vox/error/: error.h
common/include/vox/kernel/: message.h
common/include/vox/platform/windows/: platform_debug.h
common/include/vox/rtti/: rtti_impl.h  rtti_object.h  rtti_utils.h  type_info.h
common/include/vox/service/: service.h  service_provider.h
common/include/vox/service/internal/: service_provider_initialization.h
common/include/vox/string/: hash.h
common/include/vox/thread/: lock_guard.h
common/include/vox/utils/: enum.h  preprocessor.h  scope_guard.h  type_tag.h  typed_flag.h  uuid.h
common/proto/: AuthorizationRequest.proto  AuthorizationResult.proto  BriefContactInfo.proto  Chat.proto  ChatList.proto  ChatListRequest.proto  Heartbeat.proto  MessageSendRequest.proto  MessageSendResult.proto  RegistrationRequest.proto  RegistrationResult.proto  ServerIncomingMessage.proto  ServerOutgoingMessage.proto
common/src/: uuid.cpp
common/src/diag/: assertion.cpp
common/src/error/: error.cpp
common/src/rtti/: type_info.cpp
common/src/service/: service_provider_impl.cpp  service_provider_impl.h
server/: CMakeLists.txt
server/src/: DataModel.cpp  DataModel.h  VoxServer.cpp  VoxServer.h  server-main.cpp
